feat: add customer tenor lists
